<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    tools:context=".ui.setting.ChangePasswordActivity">

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/cd_back"
        android:padding="5dp"
        android:src="@drawable/back" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/btnBack"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingHorizontal="35dp"
            android:paddingTop="20dp"
            android:paddingBottom="40dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_password_title"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/change_password_hint"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                style="@style/LabelStyle"
                android:layout_width="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/current_password_label" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/edtCurrentPassword"
                    style="@style/InputStyle"
                    android:hint="@string/current_password_label"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword" />
                <ImageView
                    android:id="@+id/btnPasswordNow"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="15dp"
                    android:src="@drawable/eye_close" />
            </RelativeLayout>
            <TextView
                style="@style/LabelStyle"
                android:layout_width="match_parent"
                android:layout_marginStart="8dp"
                android:text="@string/new_password_label" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/edtNewPassword"
                    style="@style/InputStyle"
                    android:hint="@string/new_password_hint"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword" />
                <ImageView
                    android:id="@+id/btnPasswordNew"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="15dp"
                    android:src="@drawable/eye_close" />
            </RelativeLayout>
            <TextView
                style="@style/LabelStyle"
                android:layout_width="match_parent"
                android:layout_marginStart="8dp"
                android:text="@string/confirm_new_password_label" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/edtConfirmPassword"
                    style="@style/InputStyle"
                    android:hint="@string/confirm_new_password_hint"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword" />
                <ImageView
                    android:id="@+id/btnPasswordNew_Confirm"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="15dp"
                    android:src="@drawable/eye_close" />
            </RelativeLayout>
            <Button
                android:id="@+id/btnSavePassword"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="28dp"
                android:background="@drawable/btn_khung_white"
                android:text="@string/save_new_password"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:backgroundTint="@null" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
