<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bee_menu"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textColor="@color/black" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:padding="20dp"
            android:background="@drawable/circle_vang">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/img_avatar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitCenter"
                android:src="@drawable/bee_pollen"
                app:shapeAppearanceOverlay="@style/CircleStyle"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <ImageView
                android:id="@+id/img_camera"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/camera_avatar"
                android:padding="3dp"
                app:layout_constraintBottom_toBottomOf="@id/img_avatar"
                app:layout_constraintEnd_toEndOf="@id/img_avatar"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="5dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/txt_setting_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/Bee"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/txt_Email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/gmail"
            android:textSize="14sp"
            android:textColor="@color/gray_dam" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingVertical="10dp">

            <ImageView
                android:layout_width="33dp"
                android:layout_height="31dp"
                android:src="@drawable/mode" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="15dp"
                android:text="@string/che_do"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_dark_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingVertical="10dp">

            <ImageView
                android:layout_width="33dp"
                android:layout_height="31dp"
                android:src="@drawable/status" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="15dp"
                android:text="@string/trang_thai"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingVertical="10dp">

            <ImageView
                android:layout_width="33dp"
                android:layout_height="31dp"
                android:src="@drawable/notice_sound" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="15dp"
                android:text="@string/notice_sound"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/black" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_Account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"/>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>